# gen-modeling

./: .gitignore  AGENTS.md  README.md  main.py  proposal.md  pyproject.toml
examples/: CVAE_celeba.py  CVAE_stl10.py  EBM.py  EBM_mnist.py  EDM_lafan1.py  EqM.py  EqM_celeba.py  EqM_lafan1.py  EqM_mnist.py  EqM_stl10.py  FM_celeba.py  FM_lafan1.py  FM_mnist.py  FM_stl10.py  VFM_lafan1.py  WGAN_celeba.py  WGAN_stl10.py  flow_matching.py  lafan1_config.py  main.py
scripts/: compute_image_stats.py
src/gen_modeling/: flow_matching.py
src/gen_modeling/datasets/: __init__.py  images.py  robotics.py  synthetic.py
src/gen_modeling/modules/: __init__.py  cnn.py  conditional_unet.py  conditional_unet1d.py  conditional_unet2d.py  encoder1d.py
src/gen_modeling/utils/: math.py  running_stats.py
