[project]
name = "gen-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface_hub>=0.28.0",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pyright>=1.1.408",
    "scikit-learn>=1.8.0",
    "torch==2.10",
    "torchvision==0.25",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]

